  strip_trailing_slash()
- Fixed incorrect call to cmd_rm_rf() in handle_interval()
- Fixed trailing slash on call to bail() in handle_interval()
- Added sync_first feature (touches a lot of code)
- When link_dest is enabled, rsnapshot will now hunt for the newest available
  directory to use as a link_dest target (up to the oldest directory)

VERSION 1.2.1 (Apr 09 15:10 2005)
------------------------------------------------------------------------------
- Fixed security bug when neither cmd_cp or link_dest are enabled
- Disabled chown() call in copy_symlink()
- Check for symlink before all chown() calls

VERSION 1.2.0 (Jan 31 21:43 2005)
------------------------------------------------------------------------------
- Turned off buffering ($|=1)
- Changed default lockfile to /var/run/rsnapshot.pid, for FHS compliance
- Clarified man page licensing (GPL)
- Fixed is_real_local_abs_path() to handle dangling symlinks
- Changed utils/backup_smb_share.sh to re-order the smbtar arguments
- Added "-uroot" to utils/backup_mysql.sh example file
- Changed regex in is_blank() subroutine
- Changed rsync include/exclude mode to relative
- Peter Palfrader <weasel@debian.org> enhanced error reporting to include
  command line options
- Bharat Mediratta <bharat@menalto.com> improved the exclusion rules to avoid
  backing up the snapshot root. The old way was also kept for users who can't
  or don't want to upgrade their destination paths in their backup points.
- Bharat Mediratta <bharat@menalto.com> added a "+" feature to the per-backup
  point args to allow additive include/exclude rules.
- Added safe_rename() subroutine to work around a semi-obscure timestamp bug
  in certain Linux kernels
- Clarified error message about local/relative paths in config file parsing
- Added check for leading/trailing spaces in remote (ssh) paths
- Added du(1) and crontab(1) to man page references
- Added config.guess and config.sub for automake